--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.13.0"
+    "express-validator": "^6.12.0",
+    "mongodb": "^3.6.10",
+    "mongoose": "^5.13.0",
+    "uuid": "^8.3.2"
   }
 }
