--- a/package.json
+++ b/package.json
@@ -19,12 +19,11 @@
   "homepage": "https://github.com/muhammad1339/mernstarter#readme",
   "dependencies": {
     "axios": "^0.24.0",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
-    "isemail": "^3.2.0",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
     "mongoose-unique-validator": "^3.0.0",
